Correção do bug da navbar onde quando collapsed ela continuava com texto branco; Responsividade da sessao de afiliar-se

--- a/css/style.css
+++ b/css/style.css
@@ -211,10 +211,23 @@
 .top-nav-collapse > div > a > #logoColorida{
   display: inline!important;
 }
-@media only screen and (max-width: 768px) {
-  .navbar {
-    background-color: #e0e0e0;
-  }
+@media (max-width: 768px) {
+    .navbar {
+        background-color: #e0e0e0;
+        color: #000000 !important;
+    }
+    #logoBranca{
+        display: none;
+    }
+    #logoColorida{
+        display: inline!important;
+    }
+    #navbar-wrapper > div > button > div > span{
+        background: #fd7d12!important;
+    }
+    #navbar-wrapper > div > div > ul.navbar-nav.mr-auto > li.nav-item.active > a {
+      background-color: #00000029 !important;
+    }
 }
     /*NAVBAR - Animation*/
 .animated-icon1, .animated-icon2, .animated-icon3 {
